# claude-memory-system

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: publish.yml
template/: .gitignore  .gitkeep  claude-memory
template/.claude/: .gitignore
template/.claude/agents/: memory-manager.md
template/.claude/commands/: memory-archive.md  memory-clean.md  memory-compact.md  memory-help.md  memory-learn.md  memory-load.md  memory-process-trd.md  memory-project.md  memory-reset.md  memory-search.md  memory-seed.md  memory-status.md  memory-update.md
template/.claude/hooks/: add_trd_protocol.py  context_cache_checker.py  initialize_agent_system.py  subagent_memory_analyzer.py  transcript_parser.py
template/.claude/mcp/agent-messaging/: .gitignore  .mcp.json.example  INTEGRATION.md  README.md  demo.py  install.sh  pyproject.toml  server.py
template/.claude/memory/: README.md
template/.claude/memory/manager/: current-priorities.md  document-catalog.md  project-overview.md  team-roster.md
template/.claude/memory/project/: architecture.md  constraints.md  current-state.md  requirements.md
template/.claude/memory/team/: coordination-patterns.md  shared-learnings.md
template/.claude/scripts/: memory-commands.sh
