[project]
name = "agent-messaging-mcp"
version = "1.0.0"
description = "MCP server for agent-to-agent messaging in Claude Code"
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.9.0"
]

[project.scripts]
agent-messaging = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"